--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -7,7 +7,7 @@
         <header class="absolute inset-x-0 top-0 z-50">
             <nav class="flex items-center justify-between p-6 lg:px-8" aria-label="Global">
                 <div class="flex lg:flex-1">
-                    <a href="https://tailwindcss.com/" class="-m-1.5 p-1.5">
+                    <a href="https://tailwindcss.com/" target="_blank" class="-m-1.5 p-1.5">
                         <span class="sr-only">Tailwind</span>
                         <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="">
                     </a>
@@ -21,9 +21,9 @@
                     </button>
                 </div>
                 <div class="hidden lg:flex lg:gap-x-12">
-                    <a href="https://github.com/philipphermes/php-framework/blob/main/README.md" class="text-sm font-semibold leading-6 text-gray-900">Documentation</a>
-                    <a href="https://www.instagram.com/philhermes/" class="text-sm font-semibold leading-6 text-gray-900">Instagram</a>
-                    <a href="https://github.com/philipphermes" class="text-sm font-semibold leading-6 text-gray-900">About me</a>
+                    <a href="https://github.com/philipphermes/php-framework/blob/main/README.md" target="_blank" class="text-sm font-semibold leading-6 text-gray-900">Documentation</a>
+                    <a href="https://www.instagram.com/philhermes/" target="_blank" class="text-sm font-semibold leading-6 text-gray-900">Instagram</a>
+                    <a href="https://github.com/philipphermes" target="_blank" class="text-sm font-semibold leading-6 text-gray-900">About me</a>
                 </div>
             </nav>
             <!-- Mobile menu, show/hide based on menu open state. -->
@@ -46,9 +46,9 @@
                     <div class="mt-6 flow-root">
                         <div class="-my-6 divide-y divide-gray-500/10">
                             <div class="space-y-2 py-6">
-                                <a href="https://github.com/philipphermes/php-framework/blob/main/README.md" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Documentation</a>
-                                <a href="https://www.instagram.com/philhermes/" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Instagram</a>
-                                <a href="https://github.com/philipphermes" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">About me</a>
+                                <a href="https://github.com/philipphermes/php-framework/blob/main/README.md" target="_blank" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Documentation</a>
+                                <a href="https://www.instagram.com/philhermes/" target="_blank" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Instagram</a>
+                                <a href="https://github.com/philipphermes" target="_blank" class="-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">About me</a>
                             </div>
                         </div>
                     </div>
@@ -64,7 +64,7 @@
                     <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">PHP Framework</h1>
                     <p class="mt-6 text-lg leading-8 text-gray-600">Flexible and easy to learn!</p>
                     <div class="mt-10 flex items-center justify-center gap-x-6">
-                        <a href="https://github.com/philipphermes/php-framework" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Get started</a>
+                        <a href="https://github.com/philipphermes/php-framework" target="_blank" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Get started</a>
                     </div>
                 </div>
             </div>
