--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/assets/output.css" rel="stylesheet">
+    <link href="/assets/style/output.css" rel="stylesheet">
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
