--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -75,5 +75,5 @@
     </div>
 {% endblock %}
 {% block scripts %}
-<script type="text/javascript" src="assets/nav.js"></script>
+<script type="text/javascript" src="assets/scripts/nav.js"></script>
 {% endblock %}
